force-app/main/default/objects/dAN360_PlantillaporcCuenta__c/dAN360_PlantillaporcCuenta__c.object-meta.xml
<CustomObject>
    <description>Objeto Join que relacionará la cuenta con las plantillas de producto.</description>
    <label>Plantilla por cuenta</label>
    <nameField>
        <displayFormat>PlaXCta-{0000}</displayFormat>
        <label>Nombre de Plantilla por cuenta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plantillas por cuenta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>