force-app/main/default/objects/dAN360_PlantillaporcCuenta__c/fields/Dan360_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Cuenta__c</fullName>
    <description>Cliente</description>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plantillas por cuenta</relationshipLabel>
    <relationshipName>Plantillas_por_cuenta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>