force-app/main/default/objects/dAN360_PlantillaporcCuenta__c/fields/Dan360_DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>Dan360_DistributionChannel__c</fullName>
    <label>Distribution channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <default>true</default>
                <label>00</label>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>