force-app/main/default/objects/dAN360_PlantillaporcCuenta__c/fields/Dan360_PlantillaDeProductos__c.field-meta.xml
<CustomField>
    <fullName>Dan360_PlantillaDeProductos__c</fullName>
    <description>Plantilla creada para el cliente, en donde están registrados los productos que puede adquirir.</description>
    <label>Plantilla de Productos</label>
    <referenceTo>Dan360_PlantillaDeProductos__c</referenceTo>
    <relationshipLabel>Plantillas por cuenta</relationshipLabel>
    <relationshipName>Plantillas_por_cuenta</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>