force-app/main/default/objects/dAN360_PlantillaporcCuenta__c/validationRules/Dan360_ModificarUnidadDeNegocio.validationRule-meta.xml
<ValidationRule>
    <fullName>Dan360_ModificarUnidadDeNegocio</fullName>
    <active>true</active>
    <description>Regla de validación que no permite modificar la unidad de negocio de una plantilla por cuenta.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED( Dan360_UnidadNegocio__c )
)</errorConditionFormula>
    <errorDisplayField>Dan360_UnidadNegocio__c</errorDisplayField>
    <errorMessage>No tiene permisos para modificar la unidad de negocio de una plantilla por cuenta.</errorMessage>
</ValidationRule>